force-app/main/default/objects/AllegationViolation__c/AllegationViolation__c.object-meta.xml
<CustomObject>
    <description>PacPoint-JB102418 - Created for BREG phase 1</description>
    <label>Allegation Violation</label>
    <nameField>
        <displayFormat>AGV-{0000}</displayFormat>
        <label>Allegation Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AllegationViolation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>