force-app/main/default/objects/AllegationViolation__c/fields/Allegation__c.field-meta.xml
<CustomField>
    <fullName>Allegation__c</fullName>
    <description>PacPoint-JB102418 - Created for BREG phase 1</description>
    <label>Allegation</label>
    <referenceTo>Allegation__c</referenceTo>
    <relationshipLabel>AllegationViolation</relationshipLabel>
    <relationshipName>AllegationViolation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>