force-app/main/default/objects/AllegationViolation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-JB102418 - Created for BREG phase 1</description>
    <formula>Violation__r.Description__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>