force-app/main/default/objects/AllegationViolation__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>PacPoint-JB102418 - Created for BREG phase 1</description>
    <formula>Violation__r.Name</formula>
    <label>Section</label>
    <type>Text</type>
</CustomField>