force-app/main/default/objects/AllegationViolation__c/fields/Violation__c.field-meta.xml
<CustomField>
    <fullName>Violation__c</fullName>
    <description>PacPoint-JB102418 - Created for BREG phase 1</description>
    <label>Violation</label>
    <referenceTo>Violation__c</referenceTo>
    <relationshipLabel>AllegationViolation</relationshipLabel>
    <relationshipName>AllegationViolation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>