force-app/main/default/objects/AllegationViolation__c/fields/ViolationText__c.field-meta.xml
<CustomField>
    <fullName>ViolationText__c</fullName>
    <label>Violation Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>